// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flat Jest report Converts Jest JUnit XML to GitHub annotations 1`] = `
Array [
  Object {
    "classname": "Converts JUnit report to GitHub annotations",
    "failure": "Error: test
at failingCasesFrom (action-junit-annotations/index.js:105:9)
at Object.&lt;anonymous&gt; (action-junit-annotations/index.test.js:4:24)",
    "name": "__tests__/index.test.js",
    "path": "__tests__/index.test.js",
    "time": "0.015",
  },
]
`;

exports[`Flat Jest report Converts Jest JUnit XML to GitHub annotations 2`] = `
Array [
  Object {
    "annotation_level": "failure",
    "end_line": 0,
    "message": "Error: test
at failingCasesFrom (action-junit-annotations/index.js:105:9)
at Object.&lt;anonymous&gt; (action-junit-annotations/index.test.js:4:24)",
    "path": "__tests__/index.test.js",
    "start_line": 0,
  },
]
`;

exports[`Folder Jest reports Converts Jest JUnit XML folder to failing cases in JSON 1`] = `
Array [
  Object {
    "classname": "Nested report Converts failing cases in JSON to GitHub annotations",
    "failure": "Error: error
    at Object.&lt;anonymous> (action-junit-annotations/index.test.js:53:11)
    at Object.asyncJestTest (action-junit-annotations/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (&lt;anonymous>)
    at mapper (action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
    "name": "__tests__/index.test.js",
    "path": "__tests__/index.test.js",
    "time": "0.001",
  },
]
`;

exports[`Folder Jest reports Converts Jest failing cases in JSON to GitHub annotations 1`] = `
Array [
  Object {
    "annotation_level": "failure",
    "end_line": 0,
    "message": "Error: error
    at Object.&lt;anonymous> (action-junit-annotations/index.test.js:53:11)
    at Object.asyncJestTest (action-junit-annotations/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (&lt;anonymous>)
    at mapper (action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
    "path": "__tests__/index.test.js",
    "start_line": 0,
  },
]
`;

exports[`Nested Jest report Converts Jest JUnit XML to failing cases in JSON 1`] = `
Array [
  Object {
    "classname": "Nested report Converts failing cases in JSON to GitHub annotations",
    "failure": "Error: error
    at Object.&lt;anonymous&gt; (action-junit-annotations/index.test.js:53:11)
    at Object.asyncJestTest (action-junit-annotations/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (&lt;anonymous&gt;)
    at mapper (action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
    "name": "__tests__/index.test.js",
    "path": "__tests__/index.test.js",
    "time": "0.001",
  },
]
`;

exports[`Nested Jest report Converts Jest failing cases in JSON to GitHub annotations 1`] = `
Array [
  Object {
    "annotation_level": "failure",
    "end_line": 0,
    "message": "Error: error
    at Object.&lt;anonymous&gt; (action-junit-annotations/index.test.js:53:11)
    at Object.asyncJestTest (action-junit-annotations/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (&lt;anonymous&gt;)
    at mapper (action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at action-junit-annotations/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
    "path": "__tests__/index.test.js",
    "start_line": 0,
  },
]
`;
